==> RT-Thread/rt-thread/bsp/n32g452xx/libraries/rt_drivers/drv_crypto.c <==
#include <board.h>
#include "drv_crypto.h"
#define DRV_DEBUG
#define LOG_TAG              "drv.crypto"
#include <drv_log.h>
    #define BSP_USING_CRC

static rt_uint32_t _crc_update(struct hwcrypto_crc *ctx, const rt_uint8_t *in, rt_size_t length)
{
    rt_uint32_t result = 0;
    struct n32_hwcrypto_device *n32_hw_dev = (struct n32_hwcrypto_device *)ctx->parent.device->user_data;

    rt_mutex_take(&n32_hw_dev->mutex, RT_WAITING_FOREVER);

    if (ctx ->crc_cfg.flags >> 2)
    {
        LOG_E("flags out range 0x%08X", ctx ->crc_cfg.flags);
        goto _exit;
    }

    if (ctx ->crc_cfg.width == 16)
    {
        result = _get_crc16(ctx, in, length);
    }
    else if (ctx ->crc_cfg.width == 32)
    {
        result = _get_crc32(ctx, in, length);
    }

_exit:
    rt_mutex_release(&n32_hw_dev->mutex);

    return result;
}

static rt_err_t _crypto_create(struct rt_hwcrypto_ctx *ctx)
{
    rt_err_t res = RT_EOK;

    switch (ctx->type & HWCRYPTO_MAIN_TYPE_MASK)
    {
#if defined(BSP_USING_RNG)
    case HWCRYPTO_TYPE_RNG:
    {
        break;
    }
#endif /* BSP_USING_RNG */

#if defined(BSP_USING_CRC)
    case HWCRYPTO_TYPE_CRC:
    {
        RCC_EnableAHBPeriphClk(RCC_AHB_PERIPH_CRC, ENABLE);
        ((struct hwcrypto_crc *)ctx)->ops = &crc_ops;
        break;
    }
#endif /* BSP_USING_CRC */

#if defined(BSP_USING_HASH)
    case HWCRYPTO_TYPE_MD5:
    case HWCRYPTO_TYPE_SHA1:
    case HWCRYPTO_TYPE_SHA2:
    {
        break;
    }
#endif /* BSP_USING_HASH */

#if defined(BSP_USING_CRYP)
    case HWCRYPTO_TYPE_AES:
    case HWCRYPTO_TYPE_DES:
    case HWCRYPTO_TYPE_3DES:
    case HWCRYPTO_TYPE_RC4:
    case HWCRYPTO_TYPE_GCM:
    {
        break;
    }
#endif  /* BSP_USING_CRYP */

    default:
        res = -RT_ERROR;
        break;
    }
    return res;
}

int n32_hw_crypto_device_init(void)
{
    static struct n32_hwcrypto_device _crypto_dev;
    rt_uint32_t cpuid[3] = {0};

    _crypto_dev.dev.ops = &_ops;
#if defined(BSP_USING_UDID)
    /* TODO: add control command handle */

#endif /* BSP_USING_UDID */

    _crypto_dev.dev.id = 0;
    rt_memcpy(&_crypto_dev.dev.id, cpuid, 8);

    _crypto_dev.dev.user_data = &_crypto_dev;

    if (rt_hwcrypto_register(&_crypto_dev.dev, RT_HWCRYPTO_DEFAULT_NAME) != RT_EOK)
    {
        return -1;
    }
    rt_mutex_init(&_crypto_dev.mutex, RT_HWCRYPTO_DEFAULT_NAME, RT_IPC_FLAG_PRIO);
    return 0;
}
